# autoscraper

./: .dockerignore  Dockerfile  README.md  body-template.json  docker-compose.yml  main.py  pyproject.toml
api/: models.py  router.py  utils.py
api/core/: simple_scraper.py
api/routes/: basic.py
autoscraper/: __init__.py  net.py  scraper.py
bs4scraper/: __init__.py  _base.py  _bs4.py  base.py  net.py  scraper.py
bs4scraper/src/bs4scraper/: __init__.py
test/: amazon_test.py  import_test.py  jumia_test.py  test_selector.py
