[project]
name = "bs4scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JamorMoussa", email = "moussajamorsup@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bs4scraper"]
