[project]
name = "autoscraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JamorMoussa", email = "moussajamorsup@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoscraper"]
